--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -18,15 +18,18 @@ body{
    }
 
    .contact{
+    text-align: center;
     padding: 3px 10px;
-    border: 1px solid white;
-    background-color:blue;
+    border: 1px solid rgb(9, 6, 6);
+    background: -webkit-linear-gradient(to top, #18495b, #081e26, #2a95c4);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #496068, #a7b1b3, #97d3f4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     box-shadow: 1px 1px 1px 1px lightgray;
-    color: white;
+    color: rgb(0, 0, 0);
     display: flex;
    }
 
    .contact.details{
+    text-align: start;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -40,9 +43,12 @@ body{
     margin-top: 5px;
    }
    .contact .delete-button a{
-    color: white;
+    color: rgb(228, 158, 158);
     background-color: red;
 
+   }
+   #trash-icon{
+    color: #b6c1cc;
    }
 
    .contact p{
@@ -70,11 +76,52 @@ body{
   }
 
   #addbutton{
-    background-color: rgb(47, 63, 22);
+    background-color: rgb(150, 162, 131);
     border: none;
-    color: white;
-    padding: 15px 15px;
+    color:brown;
+    padding: 10px 12px;
     text-decoration: none;
     
     
   }
+  ul{
+    list-style: none;
+    padding: 0.5em 0.3em; 
+    text-align: center;
+    background: #355C7D;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #C06C84, #6C5B7B, #355C7D);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #C06C84, #6C5B7B, #355C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #2C3E50;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #FD746C, #2C3E50);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #FD746C, #2C3E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to bottom, #ff918a94, #33535e);
+    width: 25em;
+    border-radius: 0.5rem;
+     display: flex;
+     flex-direction: row;
+    flex-wrap: wrap;  
+    align-items: center;
+    justify-content: space-evenly ;
+}  
+li{
+  margin:0.5em;
+ display: flex;
+ justify-content: space-between;
+
+ border: 2px solid #e65151;
+ border-top: 0; 
+ border-left: 10px solid #c58a8a; 
+ border-right: 10px solid #274957; 
+ border-radius: 22px;
+ font-size: 1em;
+ width:80%;
+ padding: 0em 0.3em;
+} 
+
+li:hover{
+  background: #d7e7ed;
+}
+#sp{
+  width: 100px;
+  height: 20px;
+}
